# Graduation-Thesis

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
data/: graph.json  it_software_dev (2).json
docs/superpowers/plans/: 2026-04-02-gam-rag-student-modeling.md
docs/superpowers/specs/: 2026-04-02-gam-rag-student-modeling-design.md
scripts/: entrypoint.sh
src/student_modeling/: __init__.py  config.py  database.py  exceptions.py
src/student_modeling/engine/: __init__.py  embeddings.py  kalman.py  memory.py
src/student_modeling/models/: __init__.py  concept.py  course.py  domain.py  knowledge_state.py  knows_edge.py  learning_object.py  skill.py  student.py  user.py
src/student_modeling/repositories/: __init__.py  base.py  concept_repository.py  course_repository.py  domain_repository.py  knowledge_state_repository.py  knows_repository.py  learning_object_repository.py  skill_repository.py  student_repository.py  user_repository.py
src/student_modeling/services/: __init__.py  data_loader.py  modeling_service.py  student_service.py
tests/: conftest.py  test_database.py
tests/engine/: conftest.py  test_embeddings.py  test_kalman.py  test_memory.py
tests/repositories/: test_knows_repository.py  test_student_repository.py  test_user_repository.py
tests/services/: test_data_loader.py  test_modeling_service.py
