[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "student-modeling"
version = "0.1.0"
description = "Graph-based student modeling with Neo4j and GAM-RAG update policy"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sentence-transformers>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
perf = [
    "neo4j-rust-ext",
]

[tool.hatch.build.targets.wheel]
packages = ["src/student_modeling"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
